--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,253 @@
 .mainHeader {
-    display:flex;
+    display: flex;
     justify-content: space-between;
-    background-color:#f7f7f7;
+    background-color: #f7f7f7;
+    height: 55px;
+    align-items: center;
 }
 
-.navButton{ 
-    color:#bbbbbb;
-    background-color:#f7f7f7;
-    border:0;
-    font-size:30px;
-    padding:20px;
+.logo {
+    background: url('/assets/msig-logo.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+.logoText {
+    font-weight: 700;
+    font-size: 20px;
+    margin: 0;
+    visibility: hidden;
+}
+
+.navButton {
+    color: #bbbbbb;
+    background-color: #f7f7f7;
+    border: 0;
+    font-size: 18px;
+    padding: 16px;
+}
+
+.navMenuButton {
+    border-right: 1px solid #E6E6E6;
+    height: 55px;
+    border-radius: 0;
+}
+
+.navSearchButton {
+    border-left: 1px solid #E6E6E6;
+    height: 55px;
+    border-radius: 0;
+}
+
+.banner {
+    width: 100%;
+    height: 94px;
+    background: url('/assets/contact-us-Mobile.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.headerBreadcrumb {
+    background: #f7f7f7;
+    border: 1px solid #bbbbbb;
+}
+
+ol.breadcrumb {
+    padding: 10px;
+    margin-bottom: 0;
+}
+
+ol.breadcrumb li a {
+    color: #646464;
+    font-weight: 500;
+}
+
+ol.breadcrumb li.active {
+    color: #646464;
+    font-weight: 700;
+}
+
+h2 {
+    color: #050046;
+}
+
+.intro {
+    padding-top: 30px;
+}
+
+.introSection {
+    margin-left: 12px;
+    margin-right: 12px;
+    margin-bottom: 30px;
+}
+
+.intro h2 {
+    font-size: 42px;
+    color: #050046;
+}
+
+p {
+    font-size: 16pt;
+    color: #646464;
+}
+
+.formSection {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+ul.nav.nav-pills.navSection {
+    padding-top: 15px;
+}
+
+.nav-pills.navSection>li.active>a {
+    background-color: #E11F27;
+    color: #FFFFFF;
+    font-size: 21pt;
+    border: 0;
+}
+
+.nav.navSection>li>a {
+    padding: 10px 10px;
+}
+
+.nav-pills.navSection>li>a {
+    background-color: #FFFFFF;
+    color: #050046;
+    font-size: 21pt;
+    border-bottom: 4px solid #050046;
+    border-radius: 0;
+    font-weight: 700;
+}
+
+.bigBlueFont {
+    padding-top: 15px;
+    color: #050046;
+    font-size: 21pt;
+    font-weight: 700;
+}
+
+.enquirySection {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+label {
+    font-family: 'Titillium Web', sans-serif;
+    font-weight: normal;
+    font-size: 16pt;
+    color: #646464;
+    padding-left: 15px;
+    margin-right: 15px;
+}
+
+input[type="radio"] {
+    /* remove standard background appearance */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    padding: 3px;
+    margin-right: 5px;
+    justify-content: center;
+    /* background-color only for content */
+    background-clip: content-box;
+    border: 1px solid #bbbbbb;
+    background-color: transparent;
+    border-radius: 50%;
+}
+
+input[type="radio"]:focus {
+    outline: 0;
+}
+
+
+/* appearance for checked radiobutton */
+
+input[type="radio"]:checked {
+    background-color: #E11F27;
+    border-radius: 50%;
+}
+
+.formContainer {
+    margin-top: 30px;
+}
+
+.formContainer .formTitle {
+    background: #F7F7F7;
+    font-size: 21pt;
+    height: 100px;
+}
+
+.p-l-r-15 {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.p-t-b-15 {
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.formContainer .formTitle p {
+    line-height: 1;
+}
+
+.formTitle p.bigBlueFont {
+    padding-top: 20px;
+}
+
+.redText {
+    color: #E11F27;
+    font-size: 16pt;
+}
+
+.formContainer {
+    border: 1px solid #E6E6E6;
+    padding-bottom: 48px;
+    margin-bottom: 48px;
+}
+
+.geForm input {
+    width: 100%;
+    border-radius: 35px;
+    height: 80px;
+    outline: none;
+    border: 1px solid #676767;
+}
+
+.geForm input#message {
+    height: 120px;
+}
+
+input[type="submit"] {
+    width: 50px;
+}
+
+.g-recaptcha {
+    position: relative;
+    max-width: 300px;
+    background: #f9f9f9;
+    overflow: hidden;
+}
+
+.g-recaptcha>* {
+    float: left;
+    left: 0;
+    margin: -2px -2px -10px;
+    /*remove borders*/
+}
+
+.g-recaptcha::after {
+    display: block;
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 150px;
+    top: 0;
+    bottom: 0;
+    background-color: #f9f9f9;
+    clear: both;
 }
