mobile version is done, did the show/hide of forms, and show/hide of policy number

--- a/css/index.css
+++ b/css/index.css
@@ -102,6 +102,7 @@ ul.nav.nav-pills.navSection {
 
 .nav-pills.navSection>li.active>a {
     background-color: #E11F27;
+    border: 3px solid #E11F27 !important;
     color: #FFFFFF;
     font-size: 21pt;
     border: 0;
@@ -212,10 +213,18 @@ input[type="radio"]:checked {
 
 .geForm input {
     width: 100%;
-    border-radius: 35px;
+    border-radius: 32px;
     height: 80px;
     outline: none;
     border: 1px solid #676767;
+    font-size: 16pt;
+    padding-left: 12px;
+}
+
+.geForm input::placeholder {
+    font-size: 16pt;
+    color: #646464;
+    padding-left: 12px;
 }
 
 .geForm input#message {
@@ -223,31 +232,198 @@ input[type="radio"]:checked {
 }
 
 input[type="submit"] {
-    width: 50px;
+    width: 150px;
+    height: 40px;
+    background-color: #E11F27;
+    color: #FFFFFF;
+    border: 0.5px solid #E11F27;
+    font-size: 16pt;
+    font-weight: 700;
+    border-radius: 25px;
+}
+
+input[type="submit"]:hover {
+    background-color: #e11f25c5;
+    color: #FFFFFF;
+    border: 0.5px solid #e11f25c5;
+}
+
+input[type="submit"]:focus {
+    background-color: #E11F27;
+    color: #FFFFFF;
+    border: 0.5px solid #E11F27;
+}
+
+input[type="reset"] {
+    width: 150px;
+    height: 40px;
+    background-color: #FFFFFF;
+    color: #646464;
+    border: 0.5px solid #BBBBBB;
+    font-size: 16pt;
+    font-weight: 700;
+    border-radius: 25px;
+}
+
+input[type="reset"]:hover {
+    background-color: #FFFFFF;
+    color: #464646;
+    border: 0.5px solid #BBBBBB;
 }
 
 .g-recaptcha {
+    padding-top: 30px;
+    padding-left: 15px;
+    transform: scale(0.8);
+    transform-origin: 0 0;
+}
+
+.formButtons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 40px;
+}
+
+.formChildButtons {
+    padding-bottom: 16px;
+    padding-top: 0;
+}
+
+input[type=checkbox] {
+    width: 24px;
+}
+
+.TNC {
+    display: flex;
+    flex-direction: row;
+    margin-left: 10px;
+}
+
+.labelTNC {
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
+
+.TNC label {
+    font-size: 14pt;
+}
+
+.TNC label>a {
+    color: #E11F27;
+    text-decoration: underline;
+}
+
+.contactUsTab {
+    margin-top: 25px;
+}
+
+.jumbotronWrapper {
+    border-top: 1px solid #1C0063;
+    margin-top: 30px;
+}
+
+.jumboRow {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    padding-top: 20px;
+}
+
+.jumboColumn {
+    display: flex;
+    flex-direction: column;
+}
+
+.jumboColumnIMG {
+    flex-grow: 0;
+    display: flex;
+    align-items: flex-start;
+}
+
+.jumboColumnTEXT {
+    display: flex;
+    align-items: center;
+    flex: 1;
+    padding-left: 15px;
+}
+
+.jumboColumn1 img {
+    width: 56px;
+}
+
+p.contactTitle {
+    font-size: 16pt;
+    color: #1C0063;
+    font-weight: 700;
+    margin-bottom: 0;
+}
+
+p.contactInfo {
+    font-size: 14pt;
+    color: #646464;
+    line-height: 1.5;
+}
+
+p.contactNum {
+    font-size: 14pt;
+    color: #0066CC;
+}
+
+h2.contactUsMainTitle {
+    font-size: 28pt;
+    color: #1C0063;
+    font-weight: 700;
+}
+
+p.directionText {
+    color: #1C0063;
+    font-size: 16pt;
+}
+
+p.custServiceHours {
+    font-size: 16pt;
+    color: #646464;
+}
+
+.directionText span {
+    color: red;
+    font-size: 20pt;
     position: relative;
-    max-width: 300px;
-    background: #f9f9f9;
-    overflow: hidden;
+    top: 5px;
 }
 
-.g-recaptcha>* {
-    float: left;
-    left: 0;
-    margin: -2px -2px -10px;
-    /*remove borders*/
+.jumbotron.contactUsTab {
+    background-color: #E3E2EB;
+    border-radius: 32px;
 }
 
-.g-recaptcha::after {
-    display: block;
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 150px;
-    top: 0;
-    bottom: 0;
-    background-color: #f9f9f9;
-    clear: both;
+.jumbotron.customerServiceTab {
+    background-color: #EEEEEE;
+    border-radius: 32px;
+}
+
+
+/* footer  */
+
+footer {
+    background-color: #BBBBBB;
+    height: 100%;
+}
+
+footer ul {
+    width: 100%;
+    padding: 15px;
+}
+
+footer li {
+    list-style: none;
+    color: #676767;
+    font-size: 14pt;
+    text-align: center;
+}
+
+span.error {
+    color: red;
 }
