--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
       .banner {
           width: 100%;
           height: 214px !important;
-          background: url('/assets/contact-us-Banner.png');
+          background: url('assets/contact-us-Banner.png');
           background-repeat: no-repeat;
           background-size: cover;
       }
@@ -12,7 +12,7 @@
       .banner {
           width: 100%;
           height: 170px !important;
-          background: url('/assets/contact-us-Banner.png');
+          background: url('assets/contact-us-Banner.png');
           background-repeat: no-repeat;
           background-size: cover;
       }
@@ -163,7 +163,7 @@
       
       @media(min-width:411px) and (max-width:500px) {
           .banner {
-              background-image: url('/assets/contact-us-Banner.png') !important;
+              background-image: url('../assets/banner/contact-us-Banner.png') !important;
               height: 92px !important;
               background-size: cover;
               background-repeat: no-repeat;
@@ -172,7 +172,7 @@
       
       @media(min-width:501px) and (max-width:699px) {
           .banner {
-              background-image: url('/assets/contact-us-Banner.png') !important;
+              background-image: url('../assets/banner/contact-us-Banner.png') !important;
               height: 135px !important;
               background-size: cover;
               background-repeat: no-repeat;
@@ -181,7 +181,7 @@
       
       @media(min-width:700px) and (max-width:890px) {
           .banner {
-              background-image: url('/assets/contact-us-Banner.png') !important;
+              background-image: url('../assets/contact-us-Banner.png') !important;
               height: 180px !important;
               background-size: cover;
               background-repeat: no-repeat;
@@ -190,7 +190,7 @@
       
       @media(min-width:891px) and (max-width:1159px) {
           .banner {
-              background-image: url('/assets/contact-us-Banner.png') !important;
+              background-image: url('../assets/banner/contact-us-Banner.png') !important;
               height: 200px !important;
               background-size: cover;
               background-repeat: no-repeat;
@@ -199,7 +199,7 @@
       
       @media(min-width:1159px) {
           .banner {
-              background-image: url('/assets/contact-us-Banner.png') !important;
+              background-image: url('../assets/banner/contact-us-Banner.png') !important;
               height: 280px !important;
               background-size: cover;
               background-repeat: no-repeat;
@@ -263,7 +263,7 @@
       }
       
       .logo {
-          background: url('/assets/msig-logo.png');
+          background: url('assets/msig-logo.png');
           background-repeat: no-repeat;
           background-size: 100%;
       }
@@ -298,7 +298,7 @@
       .banner {
           width: 100%;
           height: 80px;
-          background: url('/assets/contact-us-Mobile.png');
+          background: url('../assets/banner/contact-us-Mobile.png');
           background-repeat: no-repeat;
           background-size: cover;
       }
@@ -805,7 +805,7 @@
       
       .pdfLink {
           padding-left: 22px;
-          background: url('/assets/icons/pdf-file.svg') no-repeat 3px 6px;
+          background: url('assets/icons/pdf-file.svg') no-repeat 3px 6px;
           background-size: 13px;
           display: block;
           padding-top: 2px;
@@ -816,7 +816,7 @@
       
       .pdfLink1 {
           padding-left: 22px;
-          background: url('/assets/icons/pdf-file.svg') no-repeat 3px 6px;
+          background: url('assets/icons/pdf-file.svg') no-repeat 3px 6px;
           background-size: 13px;
           display: inline-block;
           padding-top: 2px;
