--- a/css/index.css
+++ b/css/index.css
@@ -44,6 +44,9 @@
               justify-content: flex-end;
               width: 100%;
           }
+          .breadcrumb {
+              margin-left: 35px !important;
+          }
           .mainHeader {
               background-color: #f7f7f7;
               height: 55px;
@@ -159,11 +162,19 @@
           .formChildButtons {
               margin-right: 20px;
           }
+          .jumbotron.contactUsTab {
+              padding-left: 40px;
+              padding-right: 40px
+          }
+          .jumbotron.customerServiceTab {
+              padding-left: 40px;
+              padding-right: 40px
+          }
       }
       
       @media(min-width:411px) and (max-width:500px) {
           .banner {
-              background-image: url('../assets/banner/contact-us-Banner.png') !important;
+              background-image: url('../assets/banner/mainBannerImg.png') !important;
               height: 92px !important;
               background-size: cover;
               background-repeat: no-repeat;
@@ -172,7 +183,7 @@
       
       @media(min-width:501px) and (max-width:699px) {
           .banner {
-              background-image: url('../assets/banner/contact-us-Banner.png') !important;
+              background-image: url('../assets/banner/mainBannerImg.png') !important;
               height: 135px !important;
               background-size: cover;
               background-repeat: no-repeat;
@@ -190,7 +201,7 @@
       
       @media(min-width:891px) and (max-width:1159px) {
           .banner {
-              background-image: url('../assets/banner/contact-us-Banner.png') !important;
+              background-image: url('../assets/banner/mainBannerImg.png') !important;
               height: 200px !important;
               background-size: cover;
               background-repeat: no-repeat;
@@ -199,7 +210,7 @@
       
       @media(min-width:1159px) {
           .banner {
-              background-image: url('../assets/banner/contact-us-Banner.png') !important;
+              background-image: url('../assets/banner/mainBannerImg.png') !important;
               height: 280px !important;
               background-size: cover;
               background-repeat: no-repeat;
@@ -207,6 +218,9 @@
       }
       
       @media (min-width:1024px) {
+          .breadcrumb {
+              margin-left: 50px !important;
+          }
           .formTitle {
               display: flex;
               flex-direction: row;
@@ -220,11 +234,14 @@
           .bigBlueFont {
               padding-top: 0 !important;
               margin-bottom: 0;
-              max-width: 350px;
+              /* max-width: 350px; */
           }
       }
       
       @media(min-width:1200px) {
+          ol.breadcrumb {
+              margin-left: 71px !important;
+          }
           .policyNum label {
               display: none;
           }
@@ -236,6 +253,24 @@
           }
           .policyNum input {
               padding: 0;
+          }
+          .productRadioSection {
+              max-width: 550px;
+          }
+          .productWrapper {
+              display: flex;
+              flex-wrap: wrap;
+              justify-content: flex-start;
+              flex-direction: row;
+              column-gap: 78px;
+          }
+          .prodEnqSpacing {
+              margin-left: 32px;
+          }
+          .flexRadioEnq {
+              display: flex;
+              align-items: center;
+              margin-bottom: 16px;
           }
       }
       
@@ -308,8 +343,13 @@
           border: 1px solid #bbbbbb;
       }
       
+      .breadcrumb {
+          margin-left: 18px;
+      }
+      
       ol.breadcrumb {
           padding: 10px;
+          /* padding-left: 28px; */
           margin-bottom: 0;
       }
       
@@ -368,6 +408,7 @@
           color: #FFFFFF;
           font-size: 21px;
           border: 0;
+          text-align: center;
       }
       
       .nav.navSection>li>a {
@@ -381,6 +422,7 @@
           border-bottom: 4px solid #050046;
           border-radius: 0;
           font-weight: 700;
+          text-align: center;
       }
       
       .bigBlueFont {
@@ -745,11 +787,15 @@
       .jumbotron.contactUsTab {
           background-color: #E3E2EB;
           border-radius: 32px;
+          padding-top: 4px;
+          padding-bottom: 24px;
       }
       
       .jumbotron.customerServiceTab {
           background-color: #EEEEEE;
           border-radius: 32px;
+          padding-top: 4px;
+          padding-bottom: 24px;
       }
       /* footer  */
       
@@ -788,6 +834,14 @@
           font-family: 'Titillium Web', sans-serif;
           padding-left: 15px;
           background: transparent;
+          -webkit-box-sizing: border-box;
+          -moz-box-sizing: border-box;
+          box-sizing: border-box;
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          background-image: url('/assets/icons/caret-down.svg');
+          background-repeat: no-repeat;
+          background-position: right 7% center;
           /* -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -840,7 +894,7 @@
       }
       
       .altAddress span {
-          font-size: 12px;
+          font-size: 16px;
           color: #646464;
           display: block;
       }
@@ -880,6 +934,10 @@
           font-weight: 600;
           color: #666;
           outline: 0;
+      }
+      
+      p.detailsReq {
+          padding-top: 20px;
       }
       
       .crossell-with-cta-only>a {
@@ -928,7 +986,7 @@
               justify-content: center;
           }
           .footerFlex {
-              display: flex ;
+              display: flex;
               justify-content: center !important;
           }
       }
