--- a/css/index.css
+++ b/css/index.css
@@ -511,11 +511,11 @@
       
       label:hover {
           font-family: 'Titillium Web', sans-serif;
-          font-weight: 600;
+          font-weight: 500;
           font-size: 16px;
           color: #1C0063;
           /* padding-left: 15px; */
-          margin-right: 15px;
+          /* margin-right: 15px; */
           transition: 1s;
       }
       
